# YouLab

./: .coderabbit.yaml  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .semgrep.yaml  CLAUDE.md  CLAUDE.universal.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  hack  openapi_letta.json  pyproject.toml
.beads/: config.yaml  issues.jsonl
.claude/agents/: claude-desktop-researcher.md
.claude/commands/: ci_describe_pr.md  create_handoff_generic.md  create_plan.md  create_plan_generic.md  create_plan_nt.md  create_worktree.md  describe_pr.md  describe_pr_nt.md  implement_plan.md  local_review.md  ralph_impl.md  validate_plan.md  verify_docs.md
.claude/commands/cl/: create_plan.md  implement_plan.md  research_codebase.md
config/: course-new.toml
config/courses/: college-essay.toml
config/courses/college-essay/: course.toml
config/courses/college-essay/modules/: 01-first-impression.toml  01-self-discovery.toml  02-topic-development.toml  03-drafting.toml
config/courses/default/: course.toml
config/courses/poc-tutor/: course.toml
config/courses/poc-tutor/modules/: cs-189.toml
config/dolt/: config.yaml  init.sql
docs/: API.md  Agent-System.md  Agent-Tools.md  Architecture.md  Background-Agents.md  Changelog.md  Configuration.md  Development.md  HTTP-Service.md  Honcho.md  Letta-Archival.md  Letta-Concepts.md  Letta-Integration.md  Letta-REST-API.md  Letta-Reference.md  Letta-SDK.md  Letta-Streaming.md  Letta-Tools.md  Letta-Versions.md  Memory-System.md  OpenWebUI-Development.md  Pipeline.md  Quickstart.md  README-MANIFESTO.md  README.md  Roadmap.md  Schemas.md  Settings.md  Strategy-Agent.md  Testing.md  Tooling.md  _sidebar.md  config-schema.md  dev-testing.md  index.html  module-metadata-schema.md  openwebuiapi.md
hack/: check-agent.sh  claude-research.sh  cleanup_worktree.sh  create_worktree.sh  docs-diff.sh  generate_nightly_icons.py  generate_rounded_icons.py  launch-claude-research.applescript  rotate_icon_colors.py  test-agent.sh  verify-agent.sh
hack/ClaudeResearch.app/Contents/: Info.plist
hack/ClaudeResearch.app/Contents/MacOS/: applet
hack/ClaudeResearch.app/Contents/_CodeSignature/: CodeResources
migrations/: 003_background_tasks.sql
ralph/ralph/: config.py  honcho.py  openhands_client.py  pipe.py
ralph/ralph/tools/: query_honcho.py
src/letta_starter/: __init__.py  main.py
src/letta_starter/agents/: __init__.py  base.py  default.py  templates.py
src/letta_starter/background/: __init__.py  runner.py  schema.py
src/letta_starter/config/: __init__.py  settings.py
src/letta_starter/curriculum/: __init__.py  blocks.py  loader.py  schema.py
src/letta_starter/honcho/: __init__.py  client.py
src/letta_starter/memory/: __init__.py  blocks.py  enricher.py  manager.py  strategies.py
src/letta_starter/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/letta_starter/pipelines/: __init__.py  letta_pipe.py
src/letta_starter/server/: __init__.py  agents.py  background.py  cli.py  curriculum.py  main.py  schemas.py  tracing.py
src/letta_starter/server/strategy/: __init__.py  manager.py  router.py
src/letta_starter/server/sync/: __init__.py  mappings.py  router.py  service.py
src/letta_starter/tools/: __init__.py  curriculum.py  dialectic.py  memory.py
src/ralph/: __init__.py  artifacts.py  config.py  dolt.py  honcho.py  memory.py  openwebui_client.py  pipe.py  server.py
src/ralph/api/: __init__.py  background.py  blocks.py  chats.py  notes_adapter.py  workspace.py
src/ralph/background/: __init__.py  executor.py  models.py  registry.py  scheduler.py  tools.py
src/ralph/sync/: __init__.py  hooks.py  knowledge.py  models.py  openwebui_client.py  service.py  workspace_sync.py
src/ralph/tools/: __init__.py  honcho_tools.py  hooked_file_tools.py  latex_templates.py  latex_tools.py  memory_blocks.py  query_honcho.py
src/youlab_server/: __init__.py  main.py
src/youlab_server/agents/: __init__.py  base.py  default.py  templates.py
src/youlab_server/background/: __init__.py  factory.py  runner.py
src/youlab_server/config/: __init__.py  settings.py
src/youlab_server/curriculum/: __init__.py  blocks.py  loader.py  schema.py
src/youlab_server/honcho/: __init__.py  client.py
src/youlab_server/memory/: __init__.py  blocks.py  enricher.py  manager.py  strategies.py
src/youlab_server/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/youlab_server/pipelines/: __init__.py  letta_pipe.py
src/youlab_server/server/: __init__.py  agents.py  agents_threads.py  background.py  blocks.py  cli.py  curriculum.py  honcho.py  main.py  notes_adapter.py  tracing.py  users.py
src/youlab_server/server/strategy/: __init__.py  router.py  schemas.py
src/youlab_server/server/sync/: __init__.py  mappings.py  openwebui_client.py  router.py  service.py
src/youlab_server/storage/: __init__.py  blocks.py  convert.py  diffs.py  git.py
src/youlab_server/tools/: __init__.py  curriculum.py  dialectic.py  memory.py  sandbox.py
tests/: __init__.py  conftest.py  test_background_runner.py  test_background_schema.py  test_curriculum_loader.py  test_honcho.py  test_memory.py  test_memory_enricher.py  test_pipe.py  test_server_honcho.py  test_templates.py
tests/ralph/tools/: __init__.py  test_latex_tools.py  test_memory_blocks.py
tests/test_server/: conftest.py  test_agents.py  test_background.py  test_blocks_api.py  test_endpoints.py  test_schemas.py  test_tracing.py  test_users.py
tests/test_server/test_strategy/: __init__.py  conftest.py  test_endpoints.py  test_manager.py
tests/test_storage/: test_blocks.py  test_convert.py  test_diffs.py
tools/youlab-sync/: .gitignore  Makefile  README.md  config.example.yaml  go.mod  go.sum  main.go
tools/youlab-sync/cmd/: init.go  root.go  status.go  sync.go  watch.go
tools/youlab-sync/internal/config/: config.go
tools/youlab-sync/internal/ralph/: client.go
tools/youlab-sync/internal/sync/: sync.go
tools/youlab-sync/internal/watcher/: watcher.go
(+1 files in other folders)
